--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     // Make a request to the backend or API endpoint
     // to generate the horoscope using the OpenAI API
-    fetch('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', {
+    fetch('http://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/generate-horoscope', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json'
